--- a/Changes.org
+++ b/Changes.org
@@ -66,55 +66,67 @@
 
 *** Misc
 
-   - If an entry is clocked multiple times, it ill now show up
-     several times in the agenda and timeline buffers, when
-     log-mode is on.  This was a proposal by Jurgen Defurne.
+    - There is a new variabls `org-special-ctrl-k'.  When set,
+      `C-k' will behave specially in headlines:
 
-   - In `org-goto', typing characters now automatically starts
-     isearch from the beginning of the buffer.  The isearch is
-     special also because it only matches in headline.  This goes
-     some way toward saving org-goto from being removed from
-     Org-mode.  Thanks to Piotr Zielinski for the code, and sorry
-     that it took me o long to ut it in.  If you prefer to use
-     single letters n,p,f,b,u,q for navigation as before,
-     configure the variable `org-goto-auto-isearch'.
+      + When the cursor is at the beginning of a headline, kill
+        the entire line and possible the folded subtree below the
+        line.
+      + When in the middle of the headline text, kill the
+        headline up to the tags.
+      + When after the headline text, kill the tags.
 
-   - The clock table accepts a new parameter =:step=.  This
-     parameter can be `day' or `week' and will result in separate
-     tables for each day or week in the requested time interval.
-     This was triggered by a proposal by Sacha Chua in her [[http://sachachua.com/wp/2007/12/30/clocking-time-with-emacs-org/][blog]].
+      This is following a proposal by Piotr Zielinski.
 
-   - A time-stamp with a repeater now no longer refers to the
-     date *closest* to the current day.  Instead, it means either
-     today or the most recent match.  This change makes sure that
-     overdue scheduled or deadline items never disappear from the
-     agenda.  With the previous convention, an overdue sheduled
-     item would disappear.  For example, a weekly item scheduled
-     for Sunday would appear as overdue until Wednesday, and the
-     suddenly disappear until next Sunday.  Now the item will
-     show up as "Sched 7x" on Saturday.  From Sunday on it will
-     be in the list as "Scheduled", i.e. old sins will be
-     forgiven.  This follows a request by Warong, Dennis and
-     Bernt.
+    - If an entry is clocked multiple times, it ill now show up
+      several times in the agenda and timeline buffers, when
+      log-mode is on.  This was a proposal by Jurgen Defurne.
+      
+    - In `org-goto', typing characters now automatically starts
+      isearch from the beginning of the buffer.  The isearch is
+      special also because it only matches in headline.  This goes
+      some way toward saving org-goto from being removed from
+      Org-mode.  Thanks to Piotr Zielinski for the code, and sorry
+      that it took me o long to ut it in.  If you prefer to use
+      single letters n,p,f,b,u,q for navigation as before,
+      configure the variable `org-goto-auto-isearch'.
 
-   - Archving a subtree now creates an additional property,
-     =ARCHIVE_OLPATH=.  This property contains the "path" in the
-     outline tree to the archived entry, as it was in the
-     original file.  For example, archiving =Fix the door= in the
-     following hierarchy
+    - The clock table accepts a new parameter =:step=.  This
+      parameter can be `day' or `week' and will result in separate
+      tables for each day or week in the requested time interval.
+      This was triggered by a proposal by Sacha Chua in her [[http://sachachua.com/wp/2007/12/30/clocking-time-with-emacs-org/][blog]].
 
-     : * Tasks
-     : ** HOME
-     : *** Garage
-     : **** Fix the door
+    - A time-stamp with a repeater now no longer refers to the
+      date *closest* to the current day.  Instead, it means either
+      today or the most recent match.  This change makes sure that
+      overdue scheduled or deadline items never disappear from the
+      agenda.  With the previous convention, an overdue sheduled
+      item would disappear.  For example, a weekly item scheduled
+      for Sunday would appear as overdue until Wednesday, and the
+      suddenly disappear until next Sunday.  Now the item will
+      show up as "Sched 7x" on Saturday.  From Sunday on it will
+      be in the list as "Scheduled", i.e. old sins will be
+      forgiven.  This follows a request by Warong, Dennis and
+      Bernt.
 
-     will file is with the following property
-
-     : :ARCHIVE_PATH: Task/HOME/Garage
-
-     Note that you can configure (i.e. limit) the information
-     that gets stored upon archiving with the variable
-     `org-archive-save-context-info'.
+    - Archving a subtree now creates an additional property,
+      =ARCHIVE_OLPATH=.  This property contains the "path" in the
+      outline tree to the archived entry, as it was in the
+      original file.  For example, archiving =Fix the door= in the
+      following hierarchy
+      
+      : * Tasks
+      : ** HOME
+      : *** Garage
+      : **** Fix the door
+      
+      will file is with the following property
+      
+      : :ARCHIVE_PATH: Task/HOME/Garage
+      
+      Note that you can configure (i.e. limit) the information
+      that gets stored upon archiving with the variable
+      `org-archive-save-context-info'.
 
 * Version 5.19
 
