--- a/index.org
+++ b/index.org
@@ -22,9 +22,9 @@ messages, BBDB entries, and any files related to the projects.  For
 printing and sharing of notes, an Org-mode file can be exported as a
 structured ASCII file, HTML, and LaTeX.
 
-* Current Version (5.22) and Compatibility
+* Current Version (5.22a) and Compatibility
 
-The current version is 5.22.  To see what has changed in recent
+The current version is 5.22a.  To see what has changed in recent
 releases, check this [[file:Changes.html][list of user-visible changes]].  These descriptions
 are extensive, to avoid that people will be printing the manual after
 each incremental release.  If you have an older version of the manual,
@@ -39,7 +39,7 @@ but may lag a bit behind the website release.
 * Downloads
 
 **** Distribution
-Download as [[file:org-5.22.zip][zip file]] or [[file:org-5.22.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-5.22a.zip][zip file]] or [[file:org-5.22a.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
