--- a/index.org
+++ b/index.org
@@ -39,10 +39,16 @@ but may lag a bit behind the website release.
 * Downloads
 
 **** Distribution
+
 Download as [[file:org-5.23a.zip][zip file]] or [[file:org-5.23a.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  A shell script to simplify upgrading to the newest release
 has been posted [[http://www.philfam.co.uk/pete/GTD/org-mode/update-org.sh][here]].
+
+**** Get the development version
+
+You can check out the latest Org development version by using git.  
+More information on this page: http://repo.or.cz/w/org-mode.git
 
 * Documentation
 ** Manual and Reference card
@@ -207,6 +213,7 @@ page]], and start from there.
    somehow, when I get to it...
 
 * Related Software
+
   [[http://sachachua.com/wp/][Sacha Chua]] about [[http://sachachua.com/wp/2007/12/26/emacs-choosing-between-org-and-planner/][Choosing between Planner and Org]].
  
   
